# optimap

./: .gitignore  AGENTS.md  Cargo.toml  flake.nix  justfile
.plan/: BENCHMARKS.md  BENCHMARK_PLAN.md  BENCHMARK_RESULTS.md  BENCHMARK_RESULTS_3WAY.md  DESIGN.md  DESIGNS.md  FUTURE.md  IPO64_OPT_LOG.md  OPTIMIZATION_LOG.md  PHASE2_PLAN.md  PROGRESS.md  SPLITSIES_OPT_PLAN.md
benches/: bench_helpers.rs  btree.rs  comprehensive.rs  construction.rs  distributions.rs  hashmap_comparison.rs  load_factor.rs  matrix.rs  sets.rs  sweep.rs  throughput.rs  workloads.rs
docs/: book.toml
docs/src/: SUMMARY.md  architecture.md  index.md  roadmap.md  testing.md
docs/src/benchmarks/: methodology.md  results.md
docs/src/designs/: flat_btree.md  gaps.md  in_place_overflow.md  index.md  ipo64.md  splitsies.md  unordered_flat_map.md
docs/src/optimization/: 32-64-slot-investigation.md  closed.md  index.md  ipo64.md  splitsies.md  unordered_flat_map.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: btree_harness.rs  fuzz_btree.rs  fuzz_hashmap_gaps.rs  fuzz_hashmap_ipo.rs  fuzz_hashmap_ipo64.rs  fuzz_hashmap_ipo64_byte7.rs  fuzz_hashmap_ipo64_hi128.rs  fuzz_hashmap_ipo64_top128.rs  fuzz_hashmap_splitsies.rs  fuzz_hashmap_ufm.rs  hashmap_harness.rs
scripts/: analyze-32-64.py  plot-32-64.gp  plot-32-64.py  sweep-32-64.sh  sweep-bench.sh  sweep-hash-tag-plot.gp  sweep-hash-tag.sh  sweep-plot.gp
src/: generic_map.rs  generic_set.rs  lib.rs  map.rs  opti_set.rs  opti_sorted.rs  optimap.rs  set.rs  traits.rs
src/flat_btree/: map.rs  mod.rs  node.rs  raw.rs
src/gaps/: map.rs  mod.rs
src/gaps/raw/: group.rs  mod.rs
src/in_place_overflow/: map.rs  mod.rs
src/in_place_overflow/raw/: group.rs  mod.rs
src/ipo64/: map.rs  mod.rs
src/ipo64/raw/: group.rs  mod.rs
src/raw/: bitmask.rs  generic_group.rs  group.rs  group32.rs  group64.rs  group_layout.rs  hash.rs  kv_storage.rs  mod.rs  overflow_strategy.rs  overflow_table.rs  table_api.rs  tag_strategy.rs
src/soa/: mod.rs
src/split_overflow/: map.rs  mod.rs
src/split_overflow/raw/: group.rs  mod.rs
tests/: proptest_btree.rs  proptest_hashmap.rs  set_trait.rs  stress.rs
