[package]
name = "unordered-flat-map"
version = "0.1.0"
edition = "2024"
description = "SIMD-accelerated open-addressing flat hash map inspired by boost::unordered_flat_map"
license = "MIT OR Apache-2.0"

[dependencies]
foldhash = "0.1"
ahash = { version = "0.8", optional = true }

[features]
default = []

[dev-dependencies]
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
hashbrown = "0.15"
indexmap = "2"
rustc-hash = "2"
ahash = "0.8"
fnv = "1.0"

[[bench]]
name = "hashmap_comparison"
harness = false

[[bench]]
name = "comprehensive"
harness = false

[[bench]]
name = "load_factor"
harness = false
