[package]
name = "optimap"
version = "0.1.0"
edition = "2024"
description = "OptiMap — multiple SIMD-accelerated hash map designs with different performance trade-offs"
license = "MIT OR Apache-2.0"

[dependencies]
foldhash = "0.1"
ahash = { version = "0.8", optional = true }
hashbrown = "0.15"

[features]
default = []
# reduced_hash implementation selection (mutually exclusive):
# - default: pure Rust `low | (low == 0) as u8` — 3 instructions, 255 values
# - reduced-hash-asm: inline asm `cmp 0xFF; adc 0` — 2 instructions, 255 values (x86_64 only)
# - reduced-hash-128: `low | 1` — 1 instruction, 128 values (higher collision rate)
reduced-hash-asm = []
reduced-hash-128 = []

[dev-dependencies]
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
indexmap = "2"
rustc-hash = "2"
ahash = "0.8"
fnv = "1.0"
proptest = "1"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "construction"
harness = false

[[bench]]
name = "distributions"
harness = false

[[bench]]
name = "workloads"
harness = false

[[bench]]
name = "load_factor"
harness = false

[[bench]]
name = "btree"
harness = false

[[bench]]
name = "sets"
harness = false

[[bench]]
name = "sweep"
harness = false
